Adding a script to run the dbuild, and updating the docs